@@ -1,6 +1,7 @@
 1.2.3 (unreleased)
  * Support for connection compressions configuration (SPARKC-124)
  * Support for connection encryption configuration (SPARKC-118)
+ * Meaningful exception if some partition key column is null (SPARKC-198)
 
 1.2.2
  * Updated Spark version to 1.2.2, Scala to 2.10.5 / 2.11.6
